Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90350

Could not close DRM (NV) device (Bad file descriptor).

XMLWordPrintable

    • Integrity, Linux/Yocto
    • 957344123672e891a25e55b54dcb012d2017b27a (qt/qtbase/dev) 78735236f329ac55c442de3c90b07250cf3531eb (qt/qtbase/6.0) 475e7fed11113c8ca9724cc31052ee57e30ce97e (qt/tqtc-qtbase/tqtc/lts-5.15)

      At application exit the following is printed:

      error verbose 1 [Qt][][2] :0 :: Could not close DRM (NV) device (Bad file
      descriptor).

      The cause may be, that close() is used instead of drmClose() to close the the DRM file descriptor.

      qtbase/src/plugins/platforms/eglfs/deviceintegration/eglfs_kms_egldevice/qeglf
      skmsegldevice.cpp

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            karimpinter Karim Pinter
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes